update bower.json, minify slyDrtv

--- a/slyDemo/index.html
+++ b/slyDemo/index.html
@@ -3,19 +3,19 @@
 <head>
 	<title>Angular-Sly</title>
 	
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body ng-app="angular-sly-demo">
 	<div ng-view="" ></div>
 </body>
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
-<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-<script type="text/javascript" src="bower_components/sly/dist/sly.js"></script>
-<script type="text/javascript" src="../src/angular-sly.js"></script>
-<script type="text/javascript" src="../src/slyDrtv.js"></script>
-
+<script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="../bower_components/angular-route/angular-route.min.js"></script>
+<script type="text/javascript" src="../bower_components/sly/dist/sly.js"></script>
 <script type="text/javascript" src="js/scripts/app.js"></script>
+
+<script type="text/javascript" src="../dist/angular-sly.js"></script>
+
 
 </html>
